--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <h2 class="text-2xl sm:text-3xl font-bold text-center mb-6">Seu Último Áudio Vazado</h2>
                 <div class="text-center">
                     <p class="text-gray-600 mb-4">O que você anda falando por aí? 🤫</p>
-                    <audio controls class="w-full" src="musicas/ElevenLabs_2025-10-01T02_51_49_Ana Dias_pvc_sp100_s50_sb75_se50_b_m2.mp3"></audio>
+                    <audio controls class="w-full" src="ElevenLabs_2025-10-01T02_51_49_Ana Dias_pvc_sp100_s50_sb75_se50_b_m2.mp3"></audio>
                 </div>
             </section>
 
@@ -269,12 +269,12 @@
         const nextSongBtn = document.getElementById('next-song-btn');
 
         const songs = [
-            { title: "Música 1", src: "musicas/Mc Gorila- Cheio de Sal (Gdj Studio) - MC GORILA (youtube).mp3" },
-            { title: "Música 2", src: "musicas/vem rasgar minha xrc deixa ela arder ⧸⧸ automotivo novinho depressivo (speed up).mp3" },
-            { title: "Música 3", src: "musicas/To Fazendo Amor Com a Favela Toda.mp3" },
-            { title: "Música 4", src: "musicas/MC JESSICA DO ESCADÃO - HOJE O DIA TA LINDO - (DJ DO CRIME) - DA PONTE PRA CÁ PRODUTORA (VIDEOCLIP.mp3" },
-            { title: "Música 5", src: "musicas/MC JESSICA DO ESCADÃO - AI MEU UUU - DJ DO CRIME  ( DA PONTE PRA CA ).mp3" },
-            { title: "Música 6", src: "musicas/MC CAROL - VAMPIRO DE MADUREIRA (feat. MC GORILA) [prod. DuaL].mp3" },
+            { title: "Música 1", src: "Mc Gorila- Cheio de Sal (Gdj Studio) - MC GORILA (youtube).mp3" },
+            { title: "Música 2", src: "vem rasgar minha xrc deixa ela arder ⧸⧸ automotivo novinho depressivo (speed up).mp3" },
+            { title: "Música 3", src: "To Fazendo Amor Com a Favela Toda.mp3" },
+            { title: "Música 4", src: "MC JESSICA DO ESCADÃO - HOJE O DIA TA LINDO - (DJ DO CRIME) - DA PONTE PRA CÁ PRODUTORA (VIDEOCLIP.mp3" },
+            { title: "Música 5", src: "MC JESSICA DO ESCADÃO - AI MEU UUU - DJ DO CRIME  ( DA PONTE PRA CA ).mp3" },
+            { title: "Música 6", src: "MC CAROL - VAMPIRO DE MADUREIRA (feat. MC GORILA) [prod. DuaL].mp3" },
         ];
         let currentSongIndex = 0;
         function loadSong(song) {
@@ -429,4 +429,5 @@
     </script>
 </body>
 </html>
+
 
