--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
         const attemptsEl = document.getElementById('memory-attempts');
         10,9,3,14,5,4
         const memoryImages = [
-            'imgs/test8.png', 'imgs/cla3.png', 'imgs/cla5.png', 'imgs/cla7.png',
-            'imgs/cla.png', 'imgs/cla4.png', 'imgs/cla6.png', 'imgs/cla8.png',
+            'imgs/teste (9).png', 'imgs/teste (11).png', 'imgs/teste (14).png', 'imgs/teste (15).png',
+            'imgs/teste (10).png', 'imgs/teste (12).png', 'imgs/teste (13).png', 'imgs/teste (16).png',
         ];
 
         let flippedCards = []; let lockBoard = false; let attempts = 0;
@@ -429,5 +429,6 @@
     </script>
 </body>
 </html>
+
 
 
